modified class files

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,2 +1,7 @@
-/Cube$Adjacency.class
+/Cube.class
+/CubeSolver$CubeNode.class
+/CubeSolver$GeneticNode.class
+/CubeSolver.class
 /Engine.class
+/FastCopy
+/RubikTests.class
